--- a/app/views/layouts/login.html.erb
+++ b/app/views/layouts/login.html.erb
@@ -1,18 +1,19 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>JohariToo</title>
+    <title>Johari Too</title>
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag    'application', media: 'all' %>
     <%= javascript_include_tag 'application' %>
   </head>
 
-  <body>
+  <body class='login-body'>
+    <%= render "shared/login_nav" %>
     <% flash.each do |key, value| %>
       <div class="alert alert-<%= key %>"><%= value %></div>
     <% end %>
-    <div class='container'>
+    <div class="container">
       <%= yield %>
     </div>
   </body>
