--- a/app/views/admin/cohorts/show.html.erb
+++ b/app/views/admin/cohorts/show.html.erb
@@ -1,6 +1,6 @@
 <h1><%= @cohort.name %></h1>
 
-<%= form_with url: admin_cohort_assignments_path(@cohort) do |f| %>
+<%= form_with url: admin_cohort_assignments_path(@cohort), local: true do |f| %>
   <%= f.label :students %><br />
   <% @cohort.users.each do |student| %>
     <%= f.check_box student.full_name, id: "student-#{student.id}", name: "students[#{student.id}]" %>
