Update form styling

--- a/app/assets/stylesheets/base.scss.erb
+++ b/app/assets/stylesheets/base.scss.erb
@@ -89,7 +89,32 @@ form {
   color: $dark-gray;
 
   label {
-    padding: 10px 0 0 0;
+    padding: 4px 0 0 0;
+
+    &.form-heading {
+      font-size: 1.5em;
+      color: $turing-blue;
+    }
+  }
+
+  .checkbox-container {
+    display: flex;
+    flex-align: center;
+  }
+
+  input[type=checkbox] {
+    display: none;
+  }
+
+  input[type=checkbox] + label {
+    background: url('<%= image_path('checkbox-unchecked')%>') left top no-repeat;
+    display: block;
+    min-height: 25px;
+    padding-left: 40px;
+  }
+
+  input[type=checkbox]:checked + label {
+    background: url('<%= image_path('checkbox-checked')%>') left top no-repeat;
   }
 
   input {
