--- a/app/views/admin/cohorts/index.html.erb
+++ b/app/views/admin/cohorts/index.html.erb
@@ -2,7 +2,7 @@
 
 <ul>
   <% @cohorts.each do |cohort| %>
-    <li><%= link_to cohort.name, admin_cohort_path(cohort) %></li>
+    <li><%= link_to cohort.name, admin_cohort_path(cohort.id) %></li>
   <% end %>
 </ul>
 
