--- a/app/assets/stylesheets/base.scss.erb
+++ b/app/assets/stylesheets/base.scss.erb
@@ -35,10 +35,14 @@ h3 {
 }
 
 // LOGIN
+
 body.login-body {
   background-image: url('<%= image_path('background')%>');
-  background-size: cover;
+  background-position: center center;
   background-repeat: no-repeat;
+  background-attachment: fixed;
+  background-size: cover;
+  background-color: $light-gray;
 }
 
 // NAV
