--- a/app/views/shared/_default_nav.html.erb
+++ b/app/views/shared/_default_nav.html.erb
@@ -2,6 +2,7 @@
   <div class="container">
     <h1><%= link_to "Johari Too", root_path %></h1>
     <div class="links">
+      <%= link_to "Dashboard", dashboard_path %>
       <%= link_to "Log Out", logout_path %>
     </div>
   </div>
