Turn window into window

--- a/app/assets/stylesheets/base.scss.erb
+++ b/app/assets/stylesheets/base.scss.erb
@@ -85,7 +85,28 @@ table {
   .centered {
     text-align: center;
   }
+
+  .wrapped ul {
+    width: 30em;
+  }
+
+  .wrapped ul li {
+    float: left;
+    width: 10em;
+  }
+
+  .wrapped br {
+    clear: left;
+  }
+
+  td.wrapped {
+    margin-bottom: 1em;
+  }
+
 }
+
+
+/* allow room for 3 columns */
 
 // FORMS
 form {
