--- a/app/views/windows/show.html.erb
+++ b/app/views/windows/show.html.erb
@@ -1,37 +1,48 @@
 <h1>Your Window</h1>
 
-<div class="arena">
-  <h2>Arena</h2>
-  <ul>
-    <% @window.arena_adjectives.each do |adjective|%>
-      <li><%= adjective.name %></li>
-    <% end %>
-  </ul>
-</div>
+<table>
+  <tr>
+    <td></td>
+    <td>Known to Self</td>
+    <td>Not Known to Self</td>
+  </tr>
+  <tr>
+    <td>Known to Others</td>
+    <td class="arena wrapped">
+      <h2>Arena</h2>
+      <ul>
+        <% @window.arena_adjectives.each do |adjective|%>
+          <li><%= adjective.name %></li>
+        <% end %>
+      </ul>
+    </td>
+    <td class="blind_spot wrapped">
+      <h2>Blind Spot</h2>
+      <ul>
+        <% @window.blind_spot_adjectives.each do |adjective| %>
+          <li><%= adjective.name %></li>
+        <% end %>
+      </ul>
+    </td>
+  </tr>
+  <tr>
+    <td>Not Known to Others</td>
+    <td class="facade wrapped">
+      <h2>Facade</h2>
+      <ul>
+        <% @window.facade_adjectives.each do |adjective| %>
+          <li><%= adjective.name %></li>
+        <% end %>
+      </ul>
+    </td>
+    <td class="unknown wrapped">
+      <h2>Unknown</h2>
+      <ul>
+        <% @window.unknown_adjectives.each do |adjective| %>
+          <li><%= adjective.name %></li>
+        <% end %>
+      </ul>
+    </td>
+  </tr>
+</table>
 
-<div class="blind_spot">
-  <h2>Blind Spot</h2>
-  <ul>
-    <% @window.blind_spot_adjectives.each do |adjective| %>
-      <li><%= adjective.name %></li>
-    <% end %>
-  </ul>
-</div>
-
-<div class="facade">
-  <h2>Facade</h2>
-  <ul>
-    <% @window.facade_adjectives.each do |adjective| %>
-      <li><%= adjective.name %></li>
-    <% end %>
-  </ul>
-</div>
-
-<div class="unknown">
-  <h2>Unknown</h2>
-  <ul>
-    <% @window.unknown_adjectives.each do |adjective| %>
-      <li><%= adjective.name %></li>
-    <% end %>
-  </ul>
-</div>
