--- a/app/assets/stylesheets/base.scss.erb
+++ b/app/assets/stylesheets/base.scss.erb
@@ -11,6 +11,10 @@ $error: #9E2A2B;
   margin: auto;
 }
 
+body {
+  margin-bottom: 60px;
+}
+
 a {
   text-decoration: none;
   color: $turing-blue;
